<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="favorites">Favorites</string>
    <string name="play">Play</string>
    <string name="shuffleIsEnabled">Shuffle mode is already enabled</string>
    <string name="shuffleEnabled">Shuffle mode enabled</string>
    <string name="connection_unavailable">Yor network is unavailable. Check your data or wifi connection</string>
    <string name="retry">retry</string>
    <string name="back">Back</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="shuffle">shuffle</string>
    <string name="queue">queue</string>
    <string name="album_image">album image</string>
    <string name="seek_bar">seek bar</string>
    <string name="arrow_up">arrow up</string>
    <string name="album">Album</string>
    <string name="equalizer">equalizer</string>
    <string name="order">order</string>
    <string name="library">library</string>
    <string name="add_to_playlist">add to playlist</string>
    <string name="selected">selected</string>
    <string name="new_playlist">new playlist</string>
    <string name="clear">clear</string>
</resources>