<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playlistSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_peekHeight="?attr/actionBarSize"
        app:layout_behavior="com.luc.resources.utils.PlaylistBottomSheetBehavior">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/padding_regular"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/playlistIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/library"
                android:src="@drawable/ic_library_music"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/songCount"
                android:layout_width="@dimen/padding_regular"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/padding_small"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="?attr/colorOnSecondary" />

            <FrameLayout
                android:id="@+id/albumImageContainer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:id="@+id/albumImage"
                    android:layout_width="@dimen/image_small"
                    android:layout_height="@dimen/image_small"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/padding_small"
                    android:layout_marginEnd="@dimen/padding_small"
                    android:contentDescription="@string/album_image"
                    android:scaleType="centerCrop" />
            </FrameLayout>

        </LinearLayout>

        <com.google.android.material.appbar.MaterialToolbar
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:navigationIcon="@drawable/ic_arrow_down"
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:background="?attr/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="3 selected" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearButton"
            android:textColor="?attr/colorOnSecondary"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/sheet_expand"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:foreground="@drawable/sheet_expand"
            android:theme="@style/ThemeOverlay.MaterialComponents.Light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:alpha="0"
            android:id="@+id/songsRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:listitem="@layout/song_item_format_4" />

        <View
            android:id="@+id/separator"
            android:layout_margin="@dimen/padding_regular"
            app:layout_constraintTop_toBottomOf="@+id/songsRecycler"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <com.google.android.material.button.MaterialButton
            app:iconGravity="textStart"
            android:layout_margin="@dimen/padding_regular"
            app:icon="@drawable/ic_add"
            app:layout_constraintTop_toBottomOf="@+id/separator"
            android:id="@+id/newPlaylist"
            android:text="@string/new_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
