<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/box_regular"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/equalizerIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/equalizer"
            android:scaleX="0"
            android:scaleY="0"
            android:src="@drawable/ic_equalizer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/songTrackNum"
            app:layout_constraintStart_toStartOf="@+id/songTrackNum"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorPrimaryVariant" />

        <TextView
            android:id="@+id/songTrackNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:text="01"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/songTrackNum"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/songName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Stadium acardium"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

            <TextView
                android:id="@+id/songSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="40 listen"
                android:textAppearance="?attr/textAppearanceBody2" />
        </LinearLayout>


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/favButton"
                android:layout_width="@dimen/image_regular"
                android:layout_height="@dimen/image_regular"
                android:layout_marginEnd="@dimen/padding_regular"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/favorites"
                android:scaleX="0"
                android:scaleY="0"
                android:src="@drawable/ic_favorite"
                app:tint="?attr/colorPrimaryVariant" />

            <ImageButton
                android:id="@+id/favBorderButton"
                android:layout_width="@dimen/image_regular"
                android:layout_height="@dimen/image_regular"
                android:layout_marginEnd="@dimen/padding_regular"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/favorites"
                android:src="@drawable/ic_favorite_border"
                app:tint="?attr/colorPrimaryVariant" />
        </FrameLayout>

        <ImageButton
            android:contentDescription="@string/add_to_playlist"
            android:layout_marginEnd="@dimen/padding_small"
            android:id="@+id/playlistAddButton"
            android:layout_width="@dimen/image_regular"
            android:layout_height="@dimen/image_regular"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_playlist_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/frameLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorPrimaryVariant" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>